--- a/Proyecto final/Creación de proyectos/creación_de_proyecto.html
+++ b/Proyecto final/Creación de proyectos/creación_de_proyecto.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="Imágenes/icon.png">
     <title>Crear nuevo proyecto - Alpha</title>
     <link rel="stylesheet" href="creación_de_proyecto.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="cuerpo">
     <nav id="grad">
