--- a/Proyecto final/Inicio de sesión/login.html
+++ b/Proyecto final/Inicio de sesión/login.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="icon.png"/>
     <title>Inicio de sesión - Alpha</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="cuerpo">
     <nav id="grad">
