--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="Proyecto final/Panel de contenido (index)/Imágenes/icon.png" type="image/x-icon"/>
     <title>Panel de control - Alpha</title>
     <link rel="stylesheet" href="Proyecto final/Panel de contenido (index)/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body class="cuerpo">
     <nav id="grad">
