Correción de error de links no funcionales

--- a/Proyecto final/Inicio de sesión/login.html
+++ b/Proyecto final/Inicio de sesión/login.html
@@ -12,7 +12,7 @@
 </head>
 <body class="cuerpo">
     <nav id="grad">
-      <a href="../Página principal - index/index.html" id="page_name1">Alpha Management</a>
+      <a href="../../index.html" id="page_name1">Alpha Management</a>
     </nav>
     <div id="log">
         <div id="tipo">
