--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="Proyecto final/Panel de contenido (index)/Imágenes/search.png" alt="" id="j">
         <p id="usuario"><b>Alonso Genao</b></p>
         <p id="correoUsuario">a.genao7@unapec.edu.do</p>
-        <a href="../Pantalla 4 - inicio de sesión/login.html"><img src="Proyecto final/Panel de contenido (index)/Imágenes/pfp.jpg" alt="Usuario" id="imgUsuario"></a>
+        <a href="Proyecto final/Inicio de sesión/login.html"><img src="Proyecto final/Panel de contenido (index)/Imágenes/pfp.jpg" alt="Usuario" id="imgUsuario"></a>
     </nav>
     <menu class="menu" id="menu1">
       <div id="lista_menu">
@@ -34,9 +34,9 @@
         <ul id="el6">Reportes</ul>
         <ul id="el6">Problemas</ul>
         <ul id="subtitulo2_menu">GENERAL</ul>
-        <ul id="el7"><a href="../Pantalla 5 - creación de proyectos/creación_de_proyecto.html" class="p">Crear proyecto</a></ul>
-        <ul id="el8"><a href="../Pantalla 2 - registro de proyectos/registro_de_proyectos.html" class="o">Registro de proyectos</a></ul>
-        <ul id="el9"><a href="../Pantalla 3 - recursos humanos/registro_de_rh.html" class="o">Recursos humanos</a></ul>
+        <ul id="el7"><a href="Proyecto final/Creación de proyectos/creación_de_proyecto.html" class="p">Crear proyecto</a></ul>
+        <ul id="el8"><a href="Proyecto final/Registro de proyectos/registro_de_proyectos.html" class="o">Registro de proyectos</a></ul>
+        <ul id="el9"><a href="Proyecto final/Recursos humanos/registro_de_rh.html" class="o">Recursos humanos</a></ul>
         <ul id="el10">Configuración</ul>
       </div>
     </menu>
