--- a/Proyecto final/Creación de proyectos/creación_de_proyecto.html
+++ b/Proyecto final/Creación de proyectos/creación_de_proyecto.html
@@ -12,20 +12,20 @@
 </head>
 <body class="cuerpo">
     <nav id="grad">
-        <a href="#" id="page_name1">Alpha Management</a>
+        <a href="../../index.html" id="page_name1">Alpha Management</a>
           <form action="">
             <input class="busqueda" type="search" placeholder="Proyectos, personas, tareas...">
           </form>
           <img src="Imágenes/search.png" alt="" id="j">
           <p id="usuario"><b>Alonso Genao</b></p>
           <p id="correoUsuario">a.genao7@unapec.edu.do</p>
-          <a href="../Pantalla 4 - inicio de sesión/login.html"><img src="Imágenes/pfp.jpg" alt="Usuario" id="imgUsuario"></a>
+          <a href="../Inicio de sesión/login.html"><img src="Imágenes/pfp.jpg" alt="Usuario" id="imgUsuario"></a>
       </nav>
       <menu class="menu" id="menu1">
         <div id="lista_menu">
           <div id="selector">
           </div>
-          <ul id="el1"><a href="../Página principal - index/index.html" class="p">Panel de control</a></ul>
+          <ul id="el1"><a href="../../index.html" class="p">Panel de control</a></ul>
           <ul id="subtitulo_menu">PROYECTO ACTUAL</ul>
           <ul id="el2">Administrar</ul>
           <ul id="el3">Tareas</ul>
@@ -35,8 +35,8 @@
           <ul id="el6">Problemas</ul>
           <ul id="subtitulo2_menu">GENERAL</ul>
           <ul id="el7">Crear proyecto</ul>
-          <ul id="el8"><a href="../Pantalla 2 - registro de proyectos/registro_de_proyectos.html" class="p">Registro de proyectos</a></ul>
-          <ul id="el9"><a href="../Pantalla 3 - recursos humanos/registro_de_rh.html" class="p">Recursos humanos</a></ul>
+          <ul id="el8"><a href="../Registro de proyectos/registro_de_proyectos.html" class="p">Registro de proyectos</a></ul>
+          <ul id="el9"><a href="../Recursos humanos/registro_de_rh.html" class="p">Recursos humanos</a></ul>
           <ul id="el10">Configuración</ul>
         </div>
       </menu>
